--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>JavaScript Concept's</h1>
+    <h3>Welcome to your Website</h3>
     <script src="script.js"></script>
 </body>
 </html>
